// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconBadge /> by default matches with snapshot 1`] = `
<span
  className="sc-bdVaJa dUZTJG k-IconBadge k-IconBadge--big k-IconBadge--success"
  style={
    Object {
      "--iconBadge-background-color": null,
      "--iconBadge-border-color": null,
      "--iconBadge-border-style": null,
      "--iconBadge-border-width": null,
    }
  }
>
  <span
    className="k-IconBadge__content"
  >
    Custom children
  </span>
</span>
`;

exports[`<IconBadge /> with border style matches with snapshot 1`] = `
<span
  className="sc-bdVaJa dUZTJG k-IconBadge k-IconBadge--tiny k-IconBadge--info"
  style={
    Object {
      "--iconBadge-background-color": null,
      "--iconBadge-border-color": "#e8f7fe",
      "--iconBadge-border-style": "solid",
      "--iconBadge-border-width": "0.125rem",
    }
  }
>
  <span
    className="k-IconBadge__content"
  >
    Custom children
  </span>
</span>
`;
